--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
-      integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="./assets/css/index.css" />
     <title>Music Player</title>
   </head>
@@ -32,9 +26,11 @@
         </div>
       </div>
       <div class="buttons__player">
-        <i class="fas fa-backward" id="previous" title="Anterior"></i>
-        <i class="fas fa-play" id="play" title="Play"></i>
-        <i class="fas fa-forward" id="next" title="Siguiente"></i>
+        <i class="uil uil-backward" id="previous" title="Previous"></i>
+        <i class="uil uil-arrow-random" id="random" title="Play Randomly"></i>
+        <i class="uil uil-play" id="play" title="Play"></i>
+        <i class="uil uil-repeat" id="repeat" title="Repeat"></i>
+        <i class="uil uil-forward" id="next" title="Next"></i>
       </div>
     </div>
   </body>
